Updated Week 1 HW

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>Give me a shout <a href= "mailto:sabrina_gaber@yahoo.com">here</a>!</p>
 </h3>
 
-   <a href="resume.html">Resume></a>
+   <a href="resume.html">Resume</a>
 
   </body>
 </html>
