--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
 <li>Casted and styled models for showroom appointments and biannual meetings with global executives</li>
 </UL>
 
-<h3>Office Manager &amp; Marketing Assistant, AM Property, February 2011 – September 2011</h3>
+<h3>Office Manager & Marketing Assistant, AM Property, February 2011 - September 2011</h3>
 
 <h4>
 <UL>
@@ -56,7 +56,7 @@
 </UL>
 </h4>
 
-<h3>Marketing Assistant, Standard &amp; Poor’s, June 2007 – February 2011<h3>
+<h3>Marketing Assistant, Standard & Poor's, June 2007 - February 2011<h3>
 
 <h4>
 <UL>
