Updated Resume, Week 1 HW

--- a/resume.html
+++ b/resume.html
@@ -87,9 +87,8 @@ Internships:
 <h4>
 Skills:
 Microsoft Office, Google Analytics, Eloqua, Luminate Online, Drupal, Constant Contact, Basecamp,Dropbox, Cision Point, Typo 3, Photoshop, HTML, CSS, Facebook, Instagram, Twitter, Snapchat, Pinterest, LinkedIn
-
 </h4>
 
-    <a href="resume.html">About Me></a>
+    <a href="index.html">About Me</a>
   </body>
 </html>
