--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
    <h2>My name is Sabrina Gaber.</h2>
 
-   <img src="sabrina.jpeg">
+   <img src="sabrina.jpeg" width=400>
 
    <h2>
    <p>Thanks for visiting my page! I am a Marketing Professional who lives and works in New York City.  Outside of work, I am passionate about running, being outdoors - especially being in the mountains during the Summer and spending quality time with my friends and family. I believe in magic and highly enjoy petting strangers dogs! </p> 
